--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2>The Ultimate Gaming Hub</h2>
   </div>
   <div class="father2">
-  <div>  <img src="/image/gta.jpg" alt="">
+  <div>  <img src="./image/gta.jpg" alt="">
   <span>price:2000tk</span>
 <h4>That is best game amd it is safe for you </h4>
 <button>BAY</button>
@@ -45,3 +45,4 @@
   
 </body>
 </html>
+
