--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="father">
     <div class="f1">
-      <img src="/image/game.jpg" alt=" only gameing">
+      <img src="./image2/game.jpg" alt=" only gameing">
     </div>
     <div class="f2">
       <a href="">HOME</a>
@@ -26,17 +26,17 @@
     <h2>The Ultimate Gaming Hub</h2>
   </div>
   <div class="father2">
-  <div>  <img src="./image/gta.jpg" alt="">
+  <div>  <img src="./image2/gta.jpg" alt="">
   <span>price:2000tk</span>
 <h4>That is best game amd it is safe for you </h4>
 <button>BAY</button>
   </div> 
    
-  <div> <img src="/image/e foodboll.jpg" alt=""> <span>price:1200tk</span>
+  <div> <img src="./image2/e foodboll.jpg" alt=""> <span>price:1200tk</span>
   <h4>That is best game amd it is safe for you </h4><button>BAY</button></div> 
 
-  <div> <img src="/image/city.jpg" alt=""><span>price:2000tk</span><h4>That is best game amd it is safe for you </h4><button>BAY</button></div> 
-<div>   <img src="/image/red.jpg" alt=""><span>price:2000tk</span><h4>That is best game amd it is safe for you </h4><button>BAY</button></div> 
+  <div> <img src="./image2/city.jpg" alt=""><span>price:2000tk</span><h4>That is best game amd it is safe for you </h4><button>BAY</button></div> 
+<div>   <img src="./image2/red.jpg" alt=""><span>price:2000tk</span><h4>That is best game amd it is safe for you </h4><button>BAY</button></div> 
   
   </div>
   <footer>
@@ -45,4 +45,3 @@
   
 </body>
 </html>
-
