--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./image2/game.jpg" alt=" only gameing">
     </div>
     <div class="f2">
-      <a href="">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="">STORE</a>
       <a href="">SUPPORT</a>
       
